--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install Angular CLI
       run: npm install -g @angular/cli
 
+    - name: Set Git username
+      run: git config --global user.name "mDyingStar"
+
     - name: Set git identity
       run: |
         git config --global user.email "alexmitdembart@gmail.com"
