--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,16 +22,12 @@ jobs:
     - name: Install Angular CLI
       run: npm install -g @angular/cli
 
-    - name: Set Git username
-      run: git config --global user.name "mDyingStar"
-
-    - name: Set git identity
-      run: |
-        git config --global user.email "alexmitdembart@gmail.com"
-        git config --global user.name "mDyingStar"
-
     - name: Build the app
       run: ng build --configuration=production --base-href "https://mdyingstar.github.io/movie-portal/"
 
     - name: Deploy to GitHub Pages
-      run: npx angular-cli-ghpages --no-silent
+      run: |
+        git config --global user.email "alexmitdembart@gmail.com"
+        git config --global user.name "mDyingStar"
+        git config --global user.password "${{ secrets.GITHUB_PAT }}"
+        npx angular-cli-ghpages --no-silent
