--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist # The folder the action should deploy.
+          folder: dist
